feat: more styles

--- a/form.html
+++ b/form.html
@@ -32,6 +32,7 @@
                             <img id="profile-picture-frame"
                             src="https://static.vecteezy.com/system/resources/previews/004/511/281/original/default-avatar-photo-placeholder-profile-picture-vector.jpg"
                             width="128" height="128">
+                            <label for="image-input" class="image-input-label">Browse...</label>
                             <input type="file" class="image-input" name="image-input" id="image-input">
                         </div>
                     </div>
